todobackend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todobackapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todobackapp
  template:
    metadata:
      labels:
        app: todobackapp
    spec:
      containers:
      - name: todobackapp
        image: siddarthal/todobackend:latest
