todobackend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoback-svc
spec:
  type: ClusterIP
  selector:
    app: todobackapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3001
